# openwebgoggles

./: .dockerignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_LEVEL_PLAN.md  README.md  ROADMAP.md  SKILL.md  docker-entrypoint.sh  plan.md  pyproject.toml  smithery.yaml
.github/: FUNDING.yml  dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: approval-gate.yml  auto-tag.yml  ci.yml  docker-publish.yml  homebrew-update.yml  npm-publish.yml  publish.yml  release.yml  security.yml
.openwebgoggles-dev/: actions.json  manifest.json  state.json
.openwebgoggles-playground/: manifest.json
Formula/: openwebgoggles.rb
assets/apps/dynamic/: app.js  behaviors.js  charts.js  index.html  mcp-transport.js  sections.js  utils.js  validation.js
assets/apps/playground/: .gitignore  app.js  charts.js  dynamic-styles.css  index.html  sections.js
assets/sdk/: README.md  opencode-webview-sdk.js  openwebgoggles-sdk.js  openwebgoggles-sdk.mjs  openwebgoggles.d.ts  package.json
assets/template/: app.js  index.html  style.css
benchmarks/: 01_deployment_wizard.sh  02_code_review_hitl.sh  03_pr_batch_triage.sh  04_security_findings_qa.sh  05_db_schema_migration.sh  06_data_pipeline_config.sh  README.md
docs/: architecture.md  clients.md  cookbook.md  index.html  integrations.md
examples/: ci-approval-gate.yml
examples/approval-review/: app.js  index.html  style.css
examples/dashboard/: state.json
examples/integrations/: agents_sdk_hitl.py  autogen_hitl.py  crewai_hitl.py  langchain_hitl.py
examples/item-triage/: app.js  index.html  style.css
examples/security-qa/: app.js  index.html  style.css
references/: data-contract.md  integration-guide.md  restart-guide.md  sdk-api.md
schemas/: state.schema.json
scripts/: __init__.py  _detect_python.sh  audit.py  bundler.py  cli.py  close_webview.sh  crypto_utils.py  data_contract.py  editors.py  exceptions.py  file_watcher.py  http_handler.py  init_webview_app.sh  log_config.py  mcp_server.py  monitor.py  plugin_loader.py  pytest.ini  rate_limiter.py  read_actions.sh  requirements.txt  sdk.py  security_gate.py  session.py  start_webview.sh  stop_webview.sh  wait_for_action.sh  webhook.py  webview_server.py  write_state.sh  ws_handler.py
scripts/tests/: conftest.py  helpers.py  test_audit.py  test_bash_scripts.py  test_browser_e2e.py  test_bundler.py  test_cli.py  test_client_compat.py  test_client_escaping.py  test_crypto_utils.py  test_delta_streaming.py  test_docker.py  test_editors_registry.py  test_exceptions.py  test_homebrew.py  test_i18n.py  test_log_config.py  test_mcp_apps.py  test_mcp_server.py  test_mcp_tools.py  test_multi_session.py  test_npm_sdk.py  test_performance.py  test_ping_tool.py  test_plugin_system.py  test_reload.py  test_remote_mode.py  test_sdk.py  test_secure_comms.py  test_security_gate.py  test_security_hardening.py  test_session_archive.py  test_webhook.py  test_webview_server.py  test_webview_session.py  test_workflow_prompt.py
scripts/tests/features/: agent_liveness.feature  anti_zombification.feature  cli_lifecycle.feature  concurrency.feature  edge_cases.feature  hot_reload.feature  import_fallback.feature  installation.feature  mcp_apps.feature  mcp_lifecycle.feature  session_close.feature  stale_server.feature
scripts/tests/steps/: conftest.py  test_agent_liveness.py  test_anti_zombification.py  test_cli_lifecycle.py  test_concurrency.py  test_edge_cases.py  test_hot_reload.py  test_import_fallback.py  test_installation.py  test_mcp_apps.py  test_mcp_lifecycle.py  test_session_close.py  test_stale_server.py
